--- a/Html-CSS/produtos.css
+++ b/Html-CSS/produtos.css
@@ -41,6 +41,8 @@ nav a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: #000000 2px solid;
+    border-radius: 10px;
 }
 
 .produtos h2 {
