--- a/Html-CSS/style.css
+++ b/Html-CSS/style.css
@@ -1,48 +1,117 @@
-
-.principal {
-    background-color: #CCCCCC;
-    padding: 30px;
+header {
+    background-color: #BBBBBB;
+    padding:20px 0;
 }
 
-.titulo-principal {
-    padding-left: 20px;
+.caixa {
+    position: relative;
+    width:940px;
+    margin: 0 auto;
 }
 
-#banner{
-    width:100%;
+nav {
+    position:absolute;
+    top:110px;
+    right:0;
+}
+nav li {
+    display: inline;
+    margin: 0 0 0 15px; 
 }
 
-.titulo-centralizado{
-    text-align: center;
+nav a {
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
 }
 
-p {
-    text-align: center;
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;
 }
 
-#missao{
-    font-size: 20px;
+.produtos {
+    width:940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-i b {
-    color:#FF0000;
-}
-
-.itens {
-    font-style: italic;
-}
-
-.beneficios {
-    background-color: #FFFFFF;
-    padding: 20px;
-}
-
-ul {
+.produtos li {
     display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    text-align: center;
+    width: 30%;
+    vertical-align: top; /*alinha pelo topo*/
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: #000000 2px solid;
+    border-radius: 10px;
 }
-.imagemBeneficios {
+
+.produtos li:hover {
+    border-color: #C78C19;
+}
+
+.produtos li:hover h2 {
+    font-size: 34px;
+}
+
+.produtos li:active{
+    border-color: #088C09;
+}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-descricao {
+    font-size: 18px;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url("imagens/bg.jpg");
+    padding: 40px 0px;
+}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0px 0px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    margin: 40px 0;
+}
+
+form label, form legend {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padrao {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
     width: 50%;
 }
+
+.checkbox {
+    margin: 20px 0;
+}
+
